# wilupgu

./: ARCHITECTURE.md  Cargo.toml  README.md  REFACTOR.md
scripts/: cuda_syntax_check.py  tester_script.bat  tester_script.sh
src/: backend.rs  context.rs  graph.rs  lib.rs  pool.rs  shader.rs  tensor.rs
src/backends/: cpu.rs  cuda.rs  cuda_launch_macros.rs  mod.rs  wgpu.rs
src/builtin/: cpu_kernels.rs  cuda_kernels.rs  mod.rs
src/graph/: fuse.rs
src/nn/: cuda_kernels.rs  mod.rs  shaders.rs
src/shaders/: add.wgsl  cache_write.wgsl  casual_mask.wgsl  head_gather.wgsl  head_scatter.wgsl  matmul.wgsl  rope.wgsl  zero_tensor.wgsl
src/shaders/bwd/: adamw.wgsl  adamw_schedule.wgsl  bwd_add_inplace.wgsl  cross_entropy_bwd.wgsl  rmsnorm_bwd.wgsl  rmsnorm_weight_bwd.wgsl  silu_bwd.wgsl  softmax_bwd.wgsl
src/shaders/fwd/: causal_softmax.wgsl  cross_entropy.wgsl  embedding.wgsl  gemv.wgsl  gemv_add.wgsl  matmul.wgsl  matmul_add.wgsl  rmsnorm.wgsl  rope.wgsl  rope_offset.wgsl  silu.wgsl  softmax.wgsl  softmax_rect.wgsl
tests/: advanced_graph_test.rs  backend_parity.rs  cuda_meta_semantics.rs  graph_chain_test.rs  meta_cache_check.rs
